--- a/about.ui
+++ b/about.ui
@@ -42,14 +42,14 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>30</x>
+     <x>40</x>
      <y>40</y>
-     <width>131</width>
+     <width>110</width>
      <height>16</height>
     </rect>
    </property>
    <property name="text">
-    <string>By Emmanuel Renquin (c)</string>
+    <string>By Emmanuel Renquin</string>
    </property>
   </widget>
  </widget>
